[package]
name = "cooler"
version = "0.1.0"
authors = ["rookie1024 <rookie1286@gmail.com>"]
edition = "2018"
description = "A tool for accurately picking colors."
# documentation = TODO
# readme = TODO
# homepage = TODO
# repository = TODO
license = "AGPL-3.0-or-later"
# license-file =
keywords = ["color", "swatch", "palette", "picker", "chooser"]
categories = ["graphics", "multimedia"]

[[bin]]
name = "cooler"
path = "main.rs"

[dependencies]
gfx-hal = "0.5.2"
imgui = "0.4.0"

dispose = { version = "0.2.0", path = "../dispose" }

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "0.5.4"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "0.5.7"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "0.5.8"
features = ["x11", "xcb"]
