[package]
name = "dispose-derive"
version = "0.4.0"
authors = ["raykast <me@ryan-s.net>"]
edition = "2021"
description = "Derive macro for the dispose crate."
documentation = "https://docs.rs/dispose-derive/"
# readme = TODO
# homepage = TODO
repository = "https://github.com/rookie1024/dispose"
license = "MIT OR Apache-2.0"
# license-file =
keywords = ["linear", "dispose", "resource", "drop", "derive"]
categories = ["memory-management", "rust-patterns"]

# TODO: make this no-std?

[lib]
name = "dispose_derive"
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0.66"
proc-macro-error = "1.0.4"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["derive", "extra-traits", "fold", "full"] }

[dev-dependencies]
# Used in doctests:
gfx-hal = "0.6.0"
gfx-backend-empty = "0.6.0"
dispose = { version = "0", path = "../dispose" }

