[package]
name = "dispose"
version = "0.5.2"
authors = ["raykast <me@june-s.net>"]
edition = "2021"
description = "A simple wrapper for values that must be consumed on drop."
documentation = "https://docs.rs/dispose/"
readme = "../../README.md"
# homepage = TODO
repository = "https://github.com/ray-kast/dispose"
license = "MIT OR Apache-2.0"
# license-file =
keywords = ["linear", "dispose", "resource", "drop", "derive"]
categories = ["memory-management", "rust-patterns"]

# TODO: make this no-std?

[lib]
name = "dispose"
path = "lib.rs"

[dependencies]
dispose-derive = { version = "0.4.2", path = "../dispose-derive" }
